// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select Renders empty options in multiple mode without crashing 1`] = `
<div>
  <div
    class="select-wrapper select-wrapper-multiple select-medium"
  >
    <div
      class="select-dropdown-main-wrapper main-wrapper"
    >
      <div
        class="reference-wrapper select-input-wrapper"
        id="dropdown-reference"
      >
        <div
          class="input-wrapper input-medium input-stretch right-icon"
        >
          <div
            class="expandable-wrapper"
          >
            <div
              class="select-input-group input-group right-icon"
            >
              <input
                aria-controls="list-"
                aria-disabled="false"
                aria-expanded="false"
                aria-invalid="false"
                class="select-input input-medium with-icon-button input-stretch right-icon clear-disabled clear-not-visible"
                id="input-"
                placeholder="Select multiple test"
                readonly=""
                role="combobox"
                tabindex="0"
                type="text"
                value=""
              />
              <div
                class="action-wrapper"
              >
                <div
                  class="overlay"
                />
                <button
                  aria-disabled="false"
                  aria-hidden="true"
                  aria-label="Toggle dropdown"
                  class="icon-button right-icon button button-system-ui transparent button-medium icon-left"
                  role="presentation"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="icon icon-wrapper"
                    role="presentation"
                  >
                    <svg
                      role="presentation"
                      style="width: 20px; height: 20px;"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                        style="fill: currentColor;"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select Renders empty options in single mode without crashing 1`] = `
<div>
  <div
    class="select-wrapper select-medium"
  >
    <div
      class="select-dropdown-main-wrapper main-wrapper"
    >
      <div
        class="reference-wrapper select-input-wrapper"
        id="dropdown-reference"
      >
        <div
          class="input-wrapper input-medium input-stretch right-icon"
        >
          <div
            class="expandable-wrapper"
          >
            <div
              class="select-input-group input-group right-icon"
            >
              <input
                aria-controls="list-"
                aria-disabled="false"
                aria-expanded="false"
                aria-invalid="false"
                class="select-input input-medium with-icon-button input-stretch right-icon clear-disabled clear-not-visible"
                id="input-"
                placeholder="Select single test"
                readonly=""
                role="combobox"
                tabindex="0"
                type="text"
                value=""
              />
              <div
                class="action-wrapper"
              >
                <div
                  class="overlay"
                />
                <button
                  aria-disabled="false"
                  aria-hidden="true"
                  aria-label="Toggle dropdown"
                  class="icon-button right-icon button button-system-ui transparent button-medium icon-left"
                  role="presentation"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="icon icon-wrapper"
                    role="presentation"
                  >
                    <svg
                      role="presentation"
                      style="width: 20px; height: 20px;"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                        style="fill: currentColor;"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select Renders null options in multiple mode without crashing 1`] = `
<div>
  <div
    class="select-wrapper select-wrapper-multiple select-medium"
  >
    <div
      class="select-dropdown-main-wrapper main-wrapper"
    >
      <div
        class="reference-wrapper select-input-wrapper"
        id="dropdown-reference"
      >
        <div
          class="input-wrapper input-medium input-stretch right-icon"
        >
          <div
            class="expandable-wrapper"
          >
            <div
              class="select-input-group input-group right-icon"
            >
              <input
                aria-controls="list-"
                aria-disabled="false"
                aria-expanded="false"
                aria-invalid="false"
                class="select-input input-medium with-icon-button input-stretch right-icon clear-disabled clear-not-visible"
                id="input-"
                placeholder="Select multiple test"
                readonly=""
                role="combobox"
                tabindex="0"
                type="text"
                value=""
              />
              <div
                class="action-wrapper"
              >
                <div
                  class="overlay"
                />
                <button
                  aria-disabled="false"
                  aria-hidden="true"
                  aria-label="Toggle dropdown"
                  class="icon-button right-icon button button-system-ui transparent button-medium icon-left"
                  role="presentation"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="icon icon-wrapper"
                    role="presentation"
                  >
                    <svg
                      role="presentation"
                      style="width: 20px; height: 20px;"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                        style="fill: currentColor;"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select Renders null options in single mode without crashing 1`] = `
<div>
  <div
    class="select-wrapper select-medium"
  >
    <div
      class="select-dropdown-main-wrapper main-wrapper"
    >
      <div
        class="reference-wrapper select-input-wrapper"
        id="dropdown-reference"
      >
        <div
          class="input-wrapper input-medium input-stretch right-icon"
        >
          <div
            class="expandable-wrapper"
          >
            <div
              class="select-input-group input-group right-icon"
            >
              <input
                aria-controls="list-"
                aria-disabled="false"
                aria-expanded="false"
                aria-invalid="false"
                class="select-input input-medium with-icon-button input-stretch right-icon clear-disabled clear-not-visible"
                id="input-"
                placeholder="Select single test"
                readonly=""
                role="combobox"
                tabindex="0"
                type="text"
                value=""
              />
              <div
                class="action-wrapper"
              >
                <div
                  class="overlay"
                />
                <button
                  aria-disabled="false"
                  aria-hidden="true"
                  aria-label="Toggle dropdown"
                  class="icon-button right-icon button button-system-ui transparent button-medium icon-left"
                  role="presentation"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="icon icon-wrapper"
                    role="presentation"
                  >
                    <svg
                      role="presentation"
                      style="width: 20px; height: 20px;"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                        style="fill: currentColor;"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select Renders with default value 1`] = `
<div>
  <div
    class="select-wrapper select-medium"
  >
    <div
      class="select-dropdown-main-wrapper main-wrapper"
    >
      <div
        class="reference-wrapper select-input-wrapper"
        id="dropdown-reference"
      >
        <div
          class="input-wrapper input-medium input-stretch right-icon"
        >
          <div
            class="expandable-wrapper"
          >
            <div
              class="select-input-group input-group right-icon"
            >
              <input
                aria-controls="list-"
                aria-disabled="false"
                aria-expanded="false"
                aria-invalid="false"
                class="select-input input-medium with-icon-button input-stretch right-icon clear-disabled clear-not-visible"
                id="input-"
                placeholder="Select"
                readonly=""
                role="combobox"
                tabindex="0"
                type="text"
                value="Option 2"
              />
              <div
                class="action-wrapper"
              >
                <div
                  class="overlay"
                />
                <button
                  aria-disabled="false"
                  aria-hidden="true"
                  aria-label="Toggle dropdown"
                  class="icon-button right-icon button button-system-ui transparent button-medium icon-left"
                  role="presentation"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="icon icon-wrapper"
                    role="presentation"
                  >
                    <svg
                      role="presentation"
                      style="width: 20px; height: 20px;"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                        style="fill: currentColor;"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select Renders with default values when multiple 1`] = `
<div>
  <div
    class="select-wrapper select-wrapper-multiple select-medium"
  >
    <div
      class="multi-select-pills"
    >
      <div
        class="tag-pills multi-select-pill blue-green medium"
        id="selectPillOption 2-1"
        style="visibility: hidden;"
        tabindex="0"
      >
        <span
          class="label medium"
        >
          Option 2
        </span>
        <button
          aria-disabled="false"
          class="close-button button button-default button-small pill-shape icon-left"
        >
          <span
            class="icon icon-wrapper"
            role="presentation"
          >
            <svg
              role="presentation"
              style="width: 16px; height: 16px;"
              viewBox="0 0 24 24"
            >
              <path
                d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
                style="fill: currentColor;"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="tag-pills multi-select-pill blue-green medium"
        id="selectPillOption 3-2"
        style="visibility: hidden;"
        tabindex="0"
      >
        <span
          class="label medium"
        >
          Option 3
        </span>
        <button
          aria-disabled="false"
          class="close-button button button-default button-small pill-shape icon-left"
        >
          <span
            class="icon icon-wrapper"
            role="presentation"
          >
            <svg
              role="presentation"
              style="width: 16px; height: 16px;"
              viewBox="0 0 24 24"
            >
              <path
                d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
                style="fill: currentColor;"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="select-dropdown-main-wrapper main-wrapper"
    >
      <div
        class="reference-wrapper select-input-wrapper"
        id="dropdown-reference"
      >
        <div
          class="input-wrapper input-medium input-stretch right-icon"
        >
          <div
            class="expandable-wrapper"
          >
            <div
              class="select-input-group input-group right-icon"
            >
              <input
                aria-controls="list-"
                aria-disabled="false"
                aria-expanded="false"
                aria-invalid="false"
                class="select-input input-medium with-icon-button input-stretch right-icon clear-disabled clear-not-visible"
                id="input-"
                placeholder=""
                readonly=""
                role="combobox"
                tabindex="0"
                type="text"
                value=""
              />
              <div
                class="action-wrapper"
              >
                <div
                  class="overlay"
                />
                <button
                  aria-disabled="false"
                  aria-hidden="true"
                  aria-label="Toggle dropdown"
                  class="icon-button right-icon button button-system-ui transparent button-medium icon-left"
                  role="presentation"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="icon icon-wrapper"
                    role="presentation"
                  >
                    <svg
                      role="presentation"
                      style="width: 20px; height: 20px;"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                        style="fill: currentColor;"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select Renders without crashing 1`] = `
<div>
  <div
    class="select-wrapper select-medium"
  >
    <div
      class="select-dropdown-main-wrapper main-wrapper"
    >
      <div
        class="reference-wrapper select-input-wrapper"
        id="dropdown-reference"
      >
        <div
          class="input-wrapper input-medium input-stretch right-icon"
        >
          <div
            class="expandable-wrapper"
          >
            <div
              class="select-input-group input-group right-icon"
            >
              <input
                aria-controls="list-"
                aria-disabled="false"
                aria-expanded="false"
                aria-invalid="false"
                class="select-input input-medium with-icon-button input-stretch right-icon clear-disabled clear-not-visible"
                id="input-"
                placeholder="Select test"
                readonly=""
                role="combobox"
                tabindex="0"
                type="text"
                value=""
              />
              <div
                class="action-wrapper"
              >
                <div
                  class="overlay"
                />
                <button
                  aria-disabled="false"
                  aria-hidden="true"
                  aria-label="Toggle dropdown"
                  class="icon-button right-icon button button-system-ui transparent button-medium icon-left"
                  role="presentation"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="icon icon-wrapper"
                    role="presentation"
                  >
                    <svg
                      role="presentation"
                      style="width: 20px; height: 20px;"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                        style="fill: currentColor;"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select Select is large 1`] = `
<div
  class="select-wrapper select-large"
>
  <div
    class="select-dropdown-main-wrapper main-wrapper"
  >
    <div
      class="reference-wrapper select-input-wrapper"
      id="dropdown-reference"
    >
      <div
        class="input-wrapper input-large input-stretch right-icon"
      >
        <div
          class="expandable-wrapper"
        >
          <div
            class="select-input-group input-group right-icon"
          >
            <input
              aria-controls="list-"
              aria-disabled="false"
              aria-expanded="false"
              aria-invalid="false"
              class="select-input input-large with-icon-button input-stretch right-icon clear-disabled clear-not-visible"
              id="input-"
              placeholder="Select"
              readonly=""
              role="combobox"
              tabindex="0"
              type="text"
              value=""
            />
            <div
              class="action-wrapper"
            >
              <div
                class="overlay"
              />
              <button
                aria-disabled="false"
                aria-hidden="true"
                aria-label="Toggle dropdown"
                class="icon-button right-icon button button-system-ui transparent button-large icon-left"
                role="presentation"
                tabindex="-1"
                type="button"
              >
                <span
                  class="icon icon-wrapper"
                  role="presentation"
                >
                  <svg
                    role="presentation"
                    style="width: 24px; height: 24px;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                      style="fill: currentColor;"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select Select is medium 1`] = `
<div
  class="select-wrapper select-medium"
>
  <div
    class="select-dropdown-main-wrapper main-wrapper"
  >
    <div
      class="reference-wrapper select-input-wrapper"
      id="dropdown-reference"
    >
      <div
        class="input-wrapper input-medium input-stretch right-icon"
      >
        <div
          class="expandable-wrapper"
        >
          <div
            class="select-input-group input-group right-icon"
          >
            <input
              aria-controls="list-"
              aria-disabled="false"
              aria-expanded="false"
              aria-invalid="false"
              class="select-input input-medium with-icon-button input-stretch right-icon clear-disabled clear-not-visible"
              id="input-"
              placeholder="Select"
              readonly=""
              role="combobox"
              tabindex="0"
              type="text"
              value=""
            />
            <div
              class="action-wrapper"
            >
              <div
                class="overlay"
              />
              <button
                aria-disabled="false"
                aria-hidden="true"
                aria-label="Toggle dropdown"
                class="icon-button right-icon button button-system-ui transparent button-medium icon-left"
                role="presentation"
                tabindex="-1"
                type="button"
              >
                <span
                  class="icon icon-wrapper"
                  role="presentation"
                >
                  <svg
                    role="presentation"
                    style="width: 20px; height: 20px;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                      style="fill: currentColor;"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select Select is pill shaped 1`] = `
<div
  class="select-wrapper select-medium"
>
  <div
    class="select-dropdown-main-wrapper main-wrapper"
  >
    <div
      class="reference-wrapper select-input-wrapper"
      id="dropdown-reference"
    >
      <div
        class="input-wrapper input-medium input-stretch right-icon"
      >
        <div
          class="expandable-wrapper"
        >
          <div
            class="select-input-group input-group right-icon"
          >
            <input
              aria-controls="list-"
              aria-disabled="false"
              aria-expanded="false"
              aria-invalid="false"
              class="select-input input-medium pill-shape pill-shape-with-icon-button input-stretch right-icon clear-disabled clear-not-visible"
              id="input-"
              placeholder="Select"
              readonly=""
              role="combobox"
              tabindex="0"
              type="text"
              value=""
            />
            <div
              class="action-wrapper"
            >
              <div
                class="overlay"
              />
              <button
                aria-disabled="false"
                aria-hidden="true"
                aria-label="Toggle dropdown"
                class="icon-button right-icon button button-system-ui transparent button-medium round-shape icon-left"
                role="presentation"
                tabindex="-1"
                type="button"
              >
                <span
                  class="icon icon-wrapper"
                  role="presentation"
                >
                  <svg
                    role="presentation"
                    style="width: 20px; height: 20px;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                      style="fill: currentColor;"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select Select is rectangle shaped 1`] = `
<div
  class="select-wrapper select-medium"
>
  <div
    class="select-dropdown-main-wrapper main-wrapper"
  >
    <div
      class="reference-wrapper select-input-wrapper"
      id="dropdown-reference"
    >
      <div
        class="input-wrapper input-medium input-stretch right-icon"
      >
        <div
          class="expandable-wrapper"
        >
          <div
            class="select-input-group input-group right-icon"
          >
            <input
              aria-controls="list-"
              aria-disabled="false"
              aria-expanded="false"
              aria-invalid="false"
              class="select-input input-medium with-icon-button input-stretch right-icon clear-disabled clear-not-visible"
              id="input-"
              placeholder="Select"
              readonly=""
              role="combobox"
              tabindex="0"
              type="text"
              value=""
            />
            <div
              class="action-wrapper"
            >
              <div
                class="overlay"
              />
              <button
                aria-disabled="false"
                aria-hidden="true"
                aria-label="Toggle dropdown"
                class="icon-button right-icon button button-system-ui transparent button-medium icon-left"
                role="presentation"
                tabindex="-1"
                type="button"
              >
                <span
                  class="icon icon-wrapper"
                  role="presentation"
                >
                  <svg
                    role="presentation"
                    style="width: 20px; height: 20px;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                      style="fill: currentColor;"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select Select is small 1`] = `
<div
  class="select-wrapper select-small"
>
  <div
    class="select-dropdown-main-wrapper main-wrapper"
  >
    <div
      class="reference-wrapper select-input-wrapper"
      id="dropdown-reference"
    >
      <div
        class="input-wrapper input-small input-stretch right-icon"
      >
        <div
          class="expandable-wrapper"
        >
          <div
            class="select-input-group input-group right-icon"
          >
            <input
              aria-controls="list-"
              aria-disabled="false"
              aria-expanded="false"
              aria-invalid="false"
              class="select-input input-small with-icon-button input-stretch right-icon clear-disabled clear-not-visible"
              id="input-"
              placeholder="Select"
              readonly=""
              role="combobox"
              tabindex="0"
              type="text"
              value=""
            />
            <div
              class="action-wrapper"
            >
              <div
                class="overlay"
              />
              <button
                aria-disabled="false"
                aria-hidden="true"
                aria-label="Toggle dropdown"
                class="icon-button right-icon button button-system-ui transparent button-small icon-left"
                role="presentation"
                tabindex="-1"
                type="button"
              >
                <span
                  class="icon icon-wrapper"
                  role="presentation"
                >
                  <svg
                    role="presentation"
                    style="width: 16px; height: 16px;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                      style="fill: currentColor;"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select Select is underline shaped 1`] = `
<div
  class="select-wrapper select-medium"
>
  <div
    class="select-dropdown-main-wrapper main-wrapper"
  >
    <div
      class="reference-wrapper select-input-wrapper"
      id="dropdown-reference"
    >
      <div
        class="input-wrapper underline input-medium input-stretch right-icon"
      >
        <div
          class="expandable-wrapper"
        >
          <div
            class="select-input-group input-group right-icon"
          >
            <input
              aria-controls="list-"
              aria-disabled="false"
              aria-expanded="false"
              aria-invalid="false"
              class="select-input input-medium with-icon-button underline input-stretch right-icon clear-disabled clear-not-visible"
              id="input-"
              placeholder="Select"
              readonly=""
              role="combobox"
              tabindex="0"
              type="text"
              value=""
            />
            <div
              class="action-wrapper"
            >
              <div
                class="overlay"
              />
              <button
                aria-disabled="false"
                aria-hidden="true"
                aria-label="Toggle dropdown"
                class="icon-button right-icon button button-system-ui transparent button-medium icon-left"
                role="presentation"
                tabindex="-1"
                type="button"
              >
                <span
                  class="icon icon-wrapper"
                  role="presentation"
                >
                  <svg
                    role="presentation"
                    style="width: 20px; height: 20px;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                      style="fill: currentColor;"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
